  produced bad results for VECMs where the loadings ("alpha")
  terms were estimated subject to restrictions
- Fix bug: estimates could get out of order for some
  equation systems if the constant was not given in first
  place among the regressors
- Fix bug: the "diff" command applied to a lead of a series
  could produce spurious values with panel data
  
2010-11-29 version 1.9.3
- New estimation command "biprobit" (bivariate probit)
- New panel unit-root command "levinlin"
- Add help text for "dpanel"
- "restrict" command: enable the --full option for single-
  equation models estimated via OLS (makes the restricted
  estimates available as the "last model")
- "restrict" and "estimate" for equation systems: don't
  insist on a system-name argument, but allow a default of
  the last model (provided it was a system) 
- GUI graphs: allow option of replacing the original graph
  with a zoomed view
- Panel time-series graphs in GUI: add another format option
  and try to use date information if available
- lrvar function: allow vector argument in place of series
- Iterated GMM: raise default maximum iterations to 250, and
  add a new "set" variable, "gmm_maxiter"
- Fix bug 3105271
- Fix bug: crash in lapack in case the number of instruments
  exceeds the number of observations in tsls
- Fix bug: recent breakage in quantreg command for the case
  of multiple tau values
- Fix bug: ensure that the main window gets updated when
  series are deleted via the console
- Fix bug: don't show an excessively long list of series in
  the dialog box for confirming deletion of series
- Fix bug: creation of matrices from data series in a loop
  which changes the sub-sample via --restrict
- Fix bug: setting "halt_on_error" off should not suppress
  printing of error messages

2010-11-03 version 1.9.2
- New command "fractint" (fractional integration test)
- The "pergm" command no longer does fractional integration
  testing as a side-effect