@@ -711,10 +711,11 @@ corresponds to
 \end{array}
 \right]
 \]
-The same convention is used for $\alpha$: when only one index is given for
-each \texttt{a} term, the restriction is presumed to apply to all $r$
-rows of $\alpha$, or in other words the given variables are weakly
-exogenous. For instance, the formulation
+The same convention is used for $\alpha$: when only one index is given
+for an \texttt{a} term the restriction is presumed to apply to all
+$r$ columns of $\alpha$, or in other words the variable associated
+with the given row of $\alpha$ is weakly exogenous. For instance, the
+formulation
 %
 \begin{code}
 restrict
